Fixed overflowwing text in header.

--- a/_dist/_presentation/opstapp.css
+++ b/_dist/_presentation/opstapp.css
@@ -1006,6 +1006,12 @@ textarea {
 .info-wrapper .button-block {
   margin-top: 10px; }
 
+.info-modal .overflow-wrapper {
+  margin-left: 12px;
+  margin-right: 74px;
+  overflow: hidden;
+  text-overflow: ellipsis; }
+
 #map-canvas {
   height: 100%;
   /* Overwrites Google Maps loading style */
